--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,22 @@
-# SQLite version 3.x
-#   gem install sqlite3
-development:
-#  adapter: mysql2
-#  database: kpi
-#  username: root
-#  password:
-#  host: localhost
-# port: 3306
+plan_fact:
+  adapter: oracle_enhanced
+  database: appbb.adir.vbr.ua:1521/XE
+#  database: XE
+#  database: 127.0.0.1/XE
+  username: v_morhachov
+  password: v_morhachov
 
+personnel:
+  adapter: sqlserver
+  mode: odbc
+  dsn: sqlexpress
+  host: localhost
+  database: PxSuite
+  username: vbrdoc
+  password: 1q2w3e4r5t
+
+development:
   adapter: postgresql
-#  database: postgres
   database: kpi_development
   username: postgres
   password: postgres
